--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.5",
     "axios": "^1.7.9",
+    "dom": "^0.0.3",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.475.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
+    "react": "^19.1.1",
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
+    "router": "^2.2.0",
     "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
